# gpufleet-bench

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
cases/: EXAMPLE-xid79.yaml
gpufleet_bench/: __init__.py  metrics.py  runner.py
tests/: test_metrics.py  test_runner.py
